# Ct_PD_Scraper

./: .gitignore  README.md  caller.py  cleaner.py  cli.py  config.toml  inserter.py  pyproject.toml  scrape_police.py  useful.py
Ct_PD_Scraper/: __main__.py  cleaner.py  inserter.py  scrape_police.py  useful.py
data/: pd.db
src/ct_pd_scraper/: __init__.py  __main__.py  cleaner.py  inserter.py  scrape_police.py  settings.py  useful.py
