[tool.poetry]
name = "ct_pd_scraper"
version = "0.1.0"
description = "Basic scraper designed for the Republican-American (rep-am.com) police blotter"
authors = ["David A"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
bs4 = "^0.0.1"
qtoml = "^0.3.0"
environs = "^7.2.0"
tqdm = "^4.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
