[tool.poetry]
name = "ct_pd_scraper"
version = "0.1.0"
description = "Basic scraper designed for the Republican-American (rep-am.com) police blotter"
authors = ["David A"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
bs4 = "^0.0.1"
environs = "^7.2.0"
tqdm = "^4.43.0"
tomlkit = "^0.5.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
